--- a/web/style/default.css
+++ b/web/style/default.css
@@ -9,7 +9,7 @@ and open the template in the editor.
 */
 
  #loginPanel{
-    background-color: lightgray;
+    background-color: gray;
     border:solid 1px;
     height: 10%;
     width: 10%;
